[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shapiq_benchmark"
version = "0.1.0"
description = "A benchmark suite based on shapiq."
dynamic = ["readme"]
requires-python = ">=3.12"
dependencies = [
    "shapiq[games] >= 1.3.1",
    "numpy>=2.4.3",
    "scipy-stubs",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14'
]
authors = [
    {name = "Maximilian Muschalik", email = "Maximilian.Muschalik@lmu.de"},
    {name = "Fabian Fumagalli"},
]
license = "MIT"
keywords = [
    "python",
    "machine learning",
    "interpretable machine learning",
    "benchmark",
    "evaluation",
    "shap",
    "xai",
    "explainable ai",
    "interaction",
    "shapley interactions",
    "shapley values",
    "feature interaction",
]

[tool.uv.sources]
shapiq = { workspace = true }

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "notebook>=7.3.3",
    "ipywidgets",
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pyright]
include = ["src/shapiq_benchmark", "tests"]
exclude = ["tests"]
pythonVersion = "3.12"


[tool.ruff]
line-length = 100
target-version = "py312"
src = ["tests", "src"]

[tool.ruff.lint]
# we allow star arguments to be of type Any e.g. def func(*args: Any, **kwargs: Any) -> None: is ok
extend-safe-fixes = ["ALL"]  # dangerous on big codebases
select = ["ALL"]
ignore = [
    "COM812",  # this is redundant with the formatter which anyway does this
]
exclude = []
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101", # we need asserts in tests
]
"src/shapiq_benchmark/typing.py" = [
    "A005",  # we shadow the built-in typing module here
]

[tool.ruff.lint.isort]
known-first-party = ["shapiq_benchmark"]
extra-standard-library = ["typing_extensions"]
combine-as-imports = true
force-wrap-aliases = true
no-lines-before = ["future"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"
